# Jibimba

./: .gitignore  README.md
JibimbaBackend/: JibimbaBackend.cabal  LICENSE  README.md
JibimbaBackend/src/: Main.hs
JibimbaFrontend/: JibimbaFrontend.cabal  README.md  stack.yaml
JibimbaFrontend/src/: Main.hs  Model.hs  Update.hs  View.hs
Play_Jibimba/: UserTimes.txt
Play_Jibimba/data/: amerAdjectives10000.txt  amerNouns50000.txt  goodSyns50.txt
Play_Jibimba/frontend/: index.html  lib.js  mainMenu.css  out.js  out.stats  rts.js
