name:                JibimbaFrontend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jasminzukic/Jibimba/JibimbaFrontend#readme
license:             BSD3
license-file:        LICENSE
author:              Jasmin Zukić
maintainer:          jasminzukic2@gmail.com
copyright:           Jasmin Zukić
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable JibimbaFrontend
  main-is:             Main.hs
  hs-source-dirs:      src
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -dedupe
  build-depends:       base
                     , containers
                     , miso
                     , random
                     , random-shuffle
                     , ghcjs-base
                     , aeson
  default-language:    Haskell2010
  other-modules:       Model
                     , Update
                     , View
